# ayp2_tp1_solucion

./: CMakeLists.txt  README.md  SaveFile.csv  main.cpp
include/: Inventario.hpp  Lector.hpp  Menu.hpp  Vector.hpp
src/: Inventario.cpp  Lector.cpp  Menu.cpp
